<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonorSignIn"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_gravity="center_horizontal"
    android:background="#286cb5">

    <ImageView
        android:layout_width="212dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/splash2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="hello there,user login"
        android:textColor="#000"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In to continue"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CNIC"
            android:background="@drawable/custom_edittext"
            android:layout_marginBottom="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_baseline_id_card_24"
                android:inputType="number"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            android:background="@drawable/custom_edittext"
            style="@style/ThemeOverlay.AppCompat"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="right"
        android:text="@string/forget_password"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/donorsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="Sign In"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/donorgosignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_sign_up"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"/>

</LinearLayout>